# simplify-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  simplify.hpp  test.cpp
